express/blocks/template-x/template-x.css
/* ... */
.template-x .template:hover:not(.placeholder) .button-container,
.template-x.horizontal .template:hover:not(.placeholder) .button-container,
.template-x.horizontal .template:hover:not(.placeholder) .template-link,
.template-x.sixcols .template:hover:not(.placeholder) .button-container,
.template-x.sixcols .template:hover:not(.placeholder) .template-link,
.template-x.fullwidth .template:hover:not(.placeholder) .button-container,
.template-x.fullwidth .template:hover:not(.placeholder) .template-link {
    opacity: 1;
    pointer-events: initial;
    z-index: 2;
}

.template-x.horizontal .template:not(.placeholder) .template-link,
.template-x.sixcols .template:not(.placeholder) .template-link,
.template-x.fullwidth .template:not(.placeholder) .template-link {
    text-decoration: none;
    border-radius: 18px;
    padding: 5px 1.2em 6px 1.2em;
    text-align: center;
    font-size: var(--body-font-size-s);
    font-style: normal;
    font-weight: 600;
    line-height: var(--body-line-height);
    cursor: pointer;
    color: var(--color-black);
    background-color: var(--color-white);
    margin: 10px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    display: inline-block;
    height: fit-content;
}

.template-x.horizontal.mini .template:not(.placeholder) .template-link {
    padding: 2px 4px;
    font-size: 8px;
}

.template-x.horizontal .template:not(.placeholder) .template-link::after,
.template-x.sixcols .template:not(.placeholder) .template-link::after,
.template-x.fullwidth .template:not(.placeholder) .template-link::after {
    display: none;
}

.template-x .template.placeholder {
    box-sizing: border-box;
    display: flex;
    position: relative;
    justify-content: flex-start;
    align-items: center;
    border-radius: 14px;
    border: 2px dashed var(--color-gray-300);
    height: 242px;
    width: 200px;
    margin: 21px auto 53px;
    padding: 0;
}

.template-x.horizontal .template.placeholder,
.template-x.horizontal.fullwidth .template.placeholder {
    margin: 0 11px;
}

.template-x.sixcols .template.placeholder,
.template-x.fullwidth .template.placeholder {
    width: 145px;
    margin: 15px auto;
}

.template-x.fullwidth.lg-view .template.placeholder,
.template-x.fullwidth.md-view .template.placeholder,
.template-x.fullwidth.sm-view .template.placeholder {
    margin: 21px auto;
    max-width: 80%;
    max-height: 30vh;
    z-index: 0;
}

.template-x.fullwidth.lg-view .template.placeholder {
    width: 335px;
}

.template-x.fullwidth.md-view .template.placeholder {
    width: 165.5px;
}

.template-x.fullwidth.sm-view .template.placeholder {
    width: 106.33px;
}

.template-x .template.placeholder div:nth-of-type(2) {
    margin: 0;
    position: absolute;
    padding: 10px 20px 0;
    bottom: 10%;
    min-height: 28px;
    background: linear-gradient(rgb(255 255 255 / 0%) 0%, rgb(255 255 255) 24%);
}

.template-x .template.placeholder .template-link {
    font-size: var(--body-font-size-s);
    color: currentColor;
    text-align: center;
    line-height: 1;
    padding: 0;
    width: fit-content;
}

.template-x .template.placeholder > div:first-of-type {
    width: 100%;
    height: 95%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.template-x.sm-view .template.placeholder > div:first-of-type {
    height: 60%;
}

.template-x .template.placeholder > div:first-of-type > img,
.template-x .template.placeholder > div:first-of-type > svg {
    width: 44px;
    height: 44px;
}

.template-x.holiday.light-text svg {
    fill: var(--color-white);
}

.template-x.holiday.dark-text svg {
    fill: var(--color-gray-800);
}

.template-x.fullwidth.sm-view .template.placeholder > div:first-of-type > img,
.template-x.fullwidth.sm-view .template.placeholder > div:first-of-type > svg {
    width: 22px;
    height: 22px;
}

.template-x .template.placeholder .template-link::after {
    display: none;
}

.template-x .template.placeholder.wide > div:first-of-type {
    height: 65%;
}

.template-x .template.placeholder.wide > div:first-of-type > img,
.template-x .template.placeholder.wide > div:first-of-type > svg {
    width: 24px;
    height: 24px;
}

.template-x-inner-wrapper.flex-masonry .template {
    opacity: 0;
    transition: opacity .3s;
}

.template-x-inner-wrapper.flex-masonry .template.appear {
    opacity: 1;
}

.template-x  {
    position: relative;
}

.template-x .load-more {
    position: absolute;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    bottom: 0;
    width: 100vw;
    left: 50%;
    transform: translateX(-50%);
    height: 240px;
    background: linear-gradient(#ffffff00, #ffffff, #ffffff);
}

.template-x.horizontal .load-more {
    display: none;
}

.template-x .load-more-button {
    width: 88px;
    height: 48px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    background-color: var(--color-black);
    color: var(--color-white);
    font-size: 36px;
    border-radius: 36px;
    border: none;
    transition: background-color 0.2s;
}

.template-x .load-more-button:hover {
    background-color: var(--color-gray-700);
}

.template-x .load-more-button.disabled {
    pointer-events: none;
    opacity: 0.5;
}

.template-x .load-more-button > .icon-plus-icon {
    height: 22px;
    width: 22px;
}

.template-x .load-more-text {
    margin-top: 8px;
    font-weight: 700;
    font-size: 18px;
}

.template-x.fullwidth.lg-view > .template-x-inner-wrapper > .masonry-col {
    max-width: 335px;
    text-align: center;
}

.template-x.fullwidth.md-view > .template-x-inner-wrapper > .masonry-col {
    max-width: 156px;
    text-align: center;
}

.template-x.fullwidth.sm-view > .template-x-inner-wrapper > .masonry-col {
    max-width: 100px;
    text-align: center;
}

.template-x .toolbar-wrapper {
    padding: 0;
    background: var(--color-gray-100);
    position: sticky;
    z-index: 1;
    top: 0;
}
/* ... */

